# Large-Language-Model-Serving

./: .gitignore  Cargo.toml  Project Proposal.md  README.md
backend/: Cargo.toml
backend/src/: conversations.db  main.rs  model.rs
chat-interface/: Cargo.toml  Dioxus.toml
chat-interface/src/: main.rs
chat-interface/src/views/: conversation.rs  home.rs
frontend/: app.js  index.html  styles.css
src/: conversations.db  db.rs  main.rs  model.rs
tests/: request.http
