[package]
name = "back-end-inference-service"
version = "0.1.0"
edition = "2021"
default-run = "back-end-inference-service"

[dependencies]
actix-web = "4"
msvc_spectre_libs = "0.1.2"
clap = { version = "4.5.20", features = ["derive"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"]  }
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = ["cuda"]  }
tokenizers = "0.19.1"
serde_json = "1.0.132"
tokio = "1.41.0"
anyhow = "1.0.91"
hf-hub = "0.3.2"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
candle-examples = "0.7.2"