[package]
name = "back-end-inference-service"
version = "0.1.0"
edition = "2021"
default-run = "back-end-inference-service"

[dependencies]
actix-web = "4"
msvc_spectre_libs = "0.1.2"
clap = { version = "4.5.20", features = ["derive"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["metal"]  }
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = ["metal"]  }
tokenizers = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.41.0"
anyhow = "1.0.91"
hf-hub = "0.3.2"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
candle-examples = "0.7.2"
env_logger = "0.11.5"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
bytes = "1.9.0"
actix-utils = "3.0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-async-std"] }
actix-cors = "0.7.0"
