[package]
name = "chat-interface"
version = "0.1.0"
authors = ["Qi <feihuvxv@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["stream", "json"] }
futures-core = "0.3.31"
bytes = "1.9.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
